--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -1,15 +1,6 @@
-/*
-* Skeleton V2.0.4
-* Copyright 2014, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 12/29/2014
-*/
-
-
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
+- Global
 - Grid
 - Base Styles
 - Typography
@@ -24,6 +15,9 @@
 - Clearing
 - Media Queries
 */
+
+/* Global
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 
 /* Grid
