lots of changes 7/1

--- a/stylesheets/skeleton.css
+++ b/stylesheets/skeleton.css
@@ -25,7 +25,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 960px;
+  max-width: 3000px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
@@ -38,17 +38,18 @@
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
-    width: 85%;
+    width: 100%;
     padding: 0; }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 80%; }
+    width: 90%; }
   .column,
   .columns {
-    margin-left: 4%; }
+    margin-left: 1%;
+    margin-right: 1%; }
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
