--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,9 +5,21 @@
 
 @import "compass/reset";
 
+/* Variables */
+$cream: #F7F6ED;
+$gray: 	#8B8B8B;
+$pink:	#FF3766;
+$green:	#54B400;
+$green-lt:	#D8FD94;
+
 /* Global */
+body {
+	background: $cream;
+	color: $gray;
+}
 .center {
   margin: auto;
+  text-align: center;
 }
 .float-r {
 	float: right;
@@ -16,57 +28,193 @@
 
 /* Fonts */
 body, h1, h2, h3, h4, h5, h6 {
-	color: #FFFFFF;
 	line-height: 24px;
+	letter-spacing: 0px;
 }
 a {
 	text-decoration: none;
-}
-.pink {
-	color: #FF3766;
-}
-.gray {
-	color: #8B8B8B;
-}
-.white {
-	color: #FFFFFF;
+	color: $cream;
+	&:hover {
+		color: $green-lt;
+	    transform: scale(3);
+	}
 }
 h2 {
 	font-family: Raleway-Light;
 	font-size: 36px;
 }
+h3 {
+	font-family: Raleway-Light;
+	font-size: 28px;
+}
 h4 {
 	font-family: Raleway;
 	font-size: 18px;
-	margin-top: 30px;
 }
 h6 {
 	font-family: Raleway-Light;
 	font-size: 14px;		
 }
+p {
+	font-family: Raleway;
+	font-size: 14px;		
+}
 
 /* Hero */
+.hero-bg {
+	background: #DF0067;
+	position: absolute;
+	z-index: -10;
+	width: 100%;
+    overflow: hidden;
+    -webkit-animation: hue 35s infinite ease-in-out;
+    img {
+     	-webkit-animation: animatedBackground 500s infinite ease-out;
+     	width: 100%;
+     	overflow: hidden;
+     	opacity: 0.6;
+    }
+}
 .hero {
-	background: url(../images/hero-bg.png)repeat-x;
+	// background: url(../images/ocean-mix.svg) #DF0067;
+	background-size: 85%;
 	max-height: 676px;
+	min-height: 400px;
 	overflow: hidden;
+	position: relative;
+	z-index: 10;
+    // -webkit-animation: hue 42s infinite ease-in-out;
 	.nav h4 {
 		margin-top: 30px;
+		color: $cream;
+	}
+	h1 {
+		margin-top: 80px;
+	}
+	h2 {
+		margin-top: 10px;
+		line-height: 42px;
+		margin-bottom: 3px;
+	}
+	.logo-em {
+	    animation: pulse 5s linear infinite alternate;
+	    img {
+	    	height: 300px;
+	    	width: 350px;
+	    	&:hover {
+	    	animation: jello 2s;
+	    	transform: color($green-lt);
+	    }
+    }
+
+	}
+	.show-seeds {
+		opacity: 0;
+	}
+	.seeds {
+		position: absolute;
+		z-index: 20;
+		float: right;
+		right: 10%;
+		top: 50%;
+		img {
+			animation: seeds 5s linear infinite;
+		}
+	}
+}
+.melon-top {
+	margin-top: 90px;
+	img {
+		margin: 42px;
+	}
+}
+.green-border {
+	height: 7px;
+	width: 100%;
+	background: $green repeat-x;
+	position: absolute;
+	z-index: -1;
+	bottom: 0;
+	margin-bottom: 0;
+}
+.em-img {
+	position: absolute;
+    z-index: -10;
+    bottom: 0;
+    img {
+    	margin: -10px;
+    }
+}
+
+.portfolio {
+	padding-top: 15px;
+	background: $cream;
+	h2 {
+	    margin-top: -95px;
+		margin-bottom: 18px;
+	}
+
+	.grid-item {
+		/* Rectangle 2: */
+		background: #D8D8D8;
+		margin-bottom: 4%;
+		img {
+			width: 100%;
+		}
+	}
+	h4 {
+	    margin-top: -75px;
+	}
+	.seeds {
+		transform: scale(0.85);
+		&:hover {
+			transform: color($green);
+		}
+	}
+}
+.grid {
+	margin-bottom: 30px;
+}
+
+.portfolio-content {
+	background: $cream;
+}
+.cbp-l-filters-alignCenter{
+	background: $cream;
+	padding-bottom: 50px;
+	margin-bottom: -40px;
+}
+
+.about {
+	margin-bottom: 60px;
+	h3 {
+		margin-bottom: 15px;
+		margin-top: 30px;
+	}
+	a {
+		color: $green;
 	}
 }
 
-.hero-content img {
-	width: 100%;
+.footer {
+	background: url("../images/em-logo-light.svg") repeat-x $green;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	color: $cream;
+	animation: animatedFooter 1000s ease-out;
+	h2 {
+		margin: 20px auto 30px;
+	}
+	h4 {
+		margin-bottom: 10px;
+	}
 }
-.hero-text {
-	z-index: 10;
-	margin-top: -160px;
+
+.copyright {
+	padding-top: 8px;
+	padding-bottom: 5px;
 }
-.hero-text h2, .hero-text h6 {
-	text-align: center;
-	line-height: 15px;
-}
-.em-melon img {
-	z-index: 10;
-	margin-top: -400px;
-}
+
+
+
+
