--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -58,79 +58,216 @@ a img {
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block; }
 
+/* Variables */
 /* Global */
-/* line 9, ../sass/screen.scss */
-.center {
-  margin: auto; }
+/* line 16, ../sass/screen.scss */
+body {
+  background: #f7f6ed;
+  color: #8b8b8b; }
 
-/* line 12, ../sass/screen.scss */
+/* line 20, ../sass/screen.scss */
+.center {
+  margin: auto;
+  text-align: center; }
+
+/* line 24, ../sass/screen.scss */
 .float-r {
   float: right;
   text-align: right; }
 
 /* Fonts */
-/* line 18, ../sass/screen.scss */
+/* line 30, ../sass/screen.scss */
 body, h1, h2, h3, h4, h5, h6 {
-  color: #FFFFFF;
-  line-height: 24px; }
-
-/* line 22, ../sass/screen.scss */
-a {
-  text-decoration: none; }
-
-/* line 25, ../sass/screen.scss */
-.pink {
-  color: #FF3766; }
-
-/* line 28, ../sass/screen.scss */
-.gray {
-  color: #8B8B8B; }
-
-/* line 31, ../sass/screen.scss */
-.white {
-  color: #FFFFFF; }
+  line-height: 24px;
+  letter-spacing: 0px; }
 
 /* line 34, ../sass/screen.scss */
+a {
+  text-decoration: none;
+  color: #f7f6ed; }
+  /* line 37, ../sass/screen.scss */
+  a:hover {
+    color: #d8fd94;
+    transform: scale(3); }
+
+/* line 42, ../sass/screen.scss */
 h2 {
   font-family: Raleway-Light;
   font-size: 36px; }
 
-/* line 38, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
+h3 {
+  font-family: Raleway-Light;
+  font-size: 28px; }
+
+/* line 50, ../sass/screen.scss */
 h4 {
   font-family: Raleway;
-  font-size: 18px;
-  margin-top: 30px; }
+  font-size: 18px; }
 
-/* line 43, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 h6 {
   font-family: Raleway-Light;
   font-size: 14px; }
 
-/* Hero */
-/* line 49, ../sass/screen.scss */
-.hero {
-  background: url(../images/hero-bg.png) repeat-x;
-  max-height: 676px;
-  overflow: hidden; }
-  /* line 53, ../sass/screen.scss */
-  .hero .nav h4 {
-    margin-top: 30px; }
-
 /* line 58, ../sass/screen.scss */
-.hero-content img {
-  width: 100%; }
+p {
+  font-family: Raleway;
+  font-size: 14px; }
 
-/* line 61, ../sass/screen.scss */
-.hero-text {
-  z-index: 10;
-  margin-top: -160px; }
+/* Hero */
+/* line 64, ../sass/screen.scss */
+.hero-bg {
+  background: #DF0067;
+  position: absolute;
+  z-index: -10;
+  width: 100%;
+  overflow: hidden;
+  -webkit-animation: hue 35s infinite ease-in-out; }
+  /* line 71, ../sass/screen.scss */
+  .hero-bg img {
+    -webkit-animation: animatedBackground 500s infinite ease-out;
+    width: 100%;
+    overflow: hidden;
+    opacity: 0.6; }
 
-/* line 65, ../sass/screen.scss */
-.hero-text h2, .hero-text h6 {
-  text-align: center;
-  line-height: 15px; }
+/* line 78, ../sass/screen.scss */
+.hero {
+  background-size: 85%;
+  max-height: 676px;
+  min-height: 400px;
+  overflow: hidden;
+  position: relative;
+  z-index: 10; }
+  /* line 87, ../sass/screen.scss */
+  .hero .nav h4 {
+    margin-top: 30px;
+    color: #f7f6ed; }
+  /* line 91, ../sass/screen.scss */
+  .hero h1 {
+    margin-top: 80px; }
+  /* line 94, ../sass/screen.scss */
+  .hero h2 {
+    margin-top: 10px;
+    line-height: 42px;
+    margin-bottom: 3px; }
+  /* line 99, ../sass/screen.scss */
+  .hero .logo-em {
+    animation: pulse 5s linear infinite alternate; }
+    /* line 101, ../sass/screen.scss */
+    .hero .logo-em img {
+      height: 300px;
+      width: 350px; }
+      /* line 104, ../sass/screen.scss */
+      .hero .logo-em img:hover {
+        animation: jello 2s;
+        transform: color(#d8fd94); }
+  /* line 111, ../sass/screen.scss */
+  .hero .show-seeds {
+    opacity: 0; }
+  /* line 114, ../sass/screen.scss */
+  .hero .seeds {
+    position: absolute;
+    z-index: 20;
+    float: right;
+    right: 10%;
+    top: 50%; }
+    /* line 120, ../sass/screen.scss */
+    .hero .seeds img {
+      animation: seeds 5s linear infinite; }
 
-/* line 69, ../sass/screen.scss */
-.em-melon img {
-  z-index: 10;
-  margin-top: -400px; }
+/* line 125, ../sass/screen.scss */
+.melon-top {
+  margin-top: 90px; }
+  /* line 127, ../sass/screen.scss */
+  .melon-top img {
+    margin: 42px; }
+
+/* line 131, ../sass/screen.scss */
+.green-border {
+  height: 7px;
+  width: 100%;
+  background: #54b400 repeat-x;
+  position: absolute;
+  z-index: -1;
+  bottom: 0;
+  margin-bottom: 0; }
+
+/* line 140, ../sass/screen.scss */
+.em-img {
+  position: absolute;
+  z-index: -10;
+  bottom: 0; }
+  /* line 144, ../sass/screen.scss */
+  .em-img img {
+    margin: -10px; }
+
+/* line 149, ../sass/screen.scss */
+.portfolio {
+  padding-top: 15px;
+  background: #f7f6ed; }
+  /* line 152, ../sass/screen.scss */
+  .portfolio h2 {
+    margin-top: -95px;
+    margin-bottom: 18px; }
+  /* line 157, ../sass/screen.scss */
+  .portfolio .grid-item {
+    /* Rectangle 2: */
+    background: #D8D8D8;
+    margin-bottom: 4%; }
+    /* line 161, ../sass/screen.scss */
+    .portfolio .grid-item img {
+      width: 100%; }
+  /* line 165, ../sass/screen.scss */
+  .portfolio h4 {
+    margin-top: -75px; }
+  /* line 168, ../sass/screen.scss */
+  .portfolio .seeds {
+    transform: scale(0.85); }
+    /* line 170, ../sass/screen.scss */
+    .portfolio .seeds:hover {
+      transform: color(#54b400); }
+
+/* line 175, ../sass/screen.scss */
+.grid {
+  margin-bottom: 30px; }
+
+/* line 179, ../sass/screen.scss */
+.portfolio-content {
+  background: #f7f6ed; }
+
+/* line 182, ../sass/screen.scss */
+.cbp-l-filters-alignCenter {
+  background: #f7f6ed;
+  padding-bottom: 50px;
+  margin-bottom: -40px; }
+
+/* line 188, ../sass/screen.scss */
+.about {
+  margin-bottom: 60px; }
+  /* line 190, ../sass/screen.scss */
+  .about h3 {
+    margin-bottom: 15px;
+    margin-top: 30px; }
+  /* line 194, ../sass/screen.scss */
+  .about a {
+    color: #54b400; }
+
+/* line 199, ../sass/screen.scss */
+.footer {
+  background: url("../images/em-logo-light.svg") repeat-x #54b400;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  color: #f7f6ed;
+  animation: animatedFooter 1000s ease-out; }
+  /* line 205, ../sass/screen.scss */
+  .footer h2 {
+    margin: 20px auto 30px; }
+  /* line 208, ../sass/screen.scss */
+  .footer h4 {
+    margin-bottom: 10px; }
+
+/* line 213, ../sass/screen.scss */
+.copyright {
+  padding-top: 8px;
+  padding-bottom: 5px; }
