--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -60,130 +60,124 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* Variables */
 /* Global */
-/* line 16, ../sass/screen.scss */
+/* line 17, ../sass/screen.scss */
 body {
   background: #f7f6ed;
   color: #8b8b8b; }
 
-/* line 20, ../sass/screen.scss */
+/* line 21, ../sass/screen.scss */
 .center {
   margin: auto;
   text-align: center; }
 
-/* line 24, ../sass/screen.scss */
+/* line 25, ../sass/screen.scss */
 .float-r {
   float: right;
   text-align: right; }
 
 /* Fonts */
-/* line 30, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 body, h1, h2, h3, h4, h5, h6 {
   line-height: 24px;
   letter-spacing: 0px; }
 
-/* line 34, ../sass/screen.scss */
+/* line 35, ../sass/screen.scss */
 a {
   text-decoration: none;
   color: #f7f6ed; }
-  /* line 37, ../sass/screen.scss */
+  /* line 38, ../sass/screen.scss */
   a:hover {
-    color: #d8fd94;
-    transform: scale(3); }
+    color: #d8fd94; }
 
 /* line 42, ../sass/screen.scss */
 h2 {
   font-family: Raleway-Light;
-  font-size: 36px; }
+  font-size: 36px;
+  line-height: 45px; }
 
-/* line 46, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
 h3 {
   font-family: Raleway-Light;
   font-size: 28px; }
 
-/* line 50, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 h4 {
   font-family: Raleway;
   font-size: 18px; }
 
-/* line 54, ../sass/screen.scss */
+/* line 55, ../sass/screen.scss */
 h6 {
   font-family: Raleway-Light;
   font-size: 14px; }
 
-/* line 58, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 p {
   font-family: Raleway;
   font-size: 14px; }
 
 /* Hero */
-/* line 64, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 .hero-bg {
   background: #DF0067;
   position: absolute;
   z-index: -10;
   width: 100%;
+  height: 100%;
   overflow: hidden;
-  -webkit-animation: hue 35s infinite ease-in-out; }
-  /* line 71, ../sass/screen.scss */
+  -webkit-animation: hue 20s infinite ease-in-out; }
+  /* line 73, ../sass/screen.scss */
   .hero-bg img {
     -webkit-animation: animatedBackground 500s infinite ease-out;
     width: 100%;
     overflow: hidden;
     opacity: 0.6; }
 
-/* line 78, ../sass/screen.scss */
+/* line 80, ../sass/screen.scss */
 .hero {
   background-size: 85%;
-  max-height: 676px;
-  min-height: 400px;
+  max-height: 605px;
+  min-height: 335px;
   overflow: hidden;
   position: relative;
   z-index: 10; }
-  /* line 87, ../sass/screen.scss */
-  .hero .nav h4 {
-    margin-top: 30px;
-    color: #f7f6ed; }
-  /* line 91, ../sass/screen.scss */
-  .hero h1 {
-    margin-top: 80px; }
+  /* line 89, ../sass/screen.scss */
+  .hero h4 {
+    margin-top: 20px;
+    color: #f7f6ed;
+    float: right; }
   /* line 94, ../sass/screen.scss */
-  .hero h2 {
-    margin-top: 10px;
-    line-height: 42px;
-    margin-bottom: 3px; }
-  /* line 99, ../sass/screen.scss */
+  .hero h1 {
+    margin-top: 60px; }
+  /* line 97, ../sass/screen.scss */
   .hero .logo-em {
     animation: pulse 5s linear infinite alternate; }
-    /* line 101, ../sass/screen.scss */
+    /* line 99, ../sass/screen.scss */
     .hero .logo-em img {
       height: 300px;
       width: 350px; }
-      /* line 104, ../sass/screen.scss */
+      /* line 102, ../sass/screen.scss */
       .hero .logo-em img:hover {
         animation: jello 2s;
         transform: color(#d8fd94); }
-  /* line 111, ../sass/screen.scss */
+  /* line 109, ../sass/screen.scss */
   .hero .show-seeds {
     opacity: 0; }
-  /* line 114, ../sass/screen.scss */
+  /* line 112, ../sass/screen.scss */
   .hero .seeds {
     position: absolute;
     z-index: 20;
     float: right;
     right: 10%;
     top: 50%; }
-    /* line 120, ../sass/screen.scss */
-    .hero .seeds img {
-      animation: seeds 5s linear infinite; }
+    /* line 119, ../sass/screen.scss */
+    .hero .seeds img:hover {
+      animation: zoomOutDown 2s ease-in; }
 
 /* line 125, ../sass/screen.scss */
 .melon-top {
-  margin-top: 90px; }
-  /* line 127, ../sass/screen.scss */
-  .melon-top img {
-    margin: 42px; }
+  margin-top: 80px; }
 
-/* line 131, ../sass/screen.scss */
+/* line 128, ../sass/screen.scss */
 .green-border {
   height: 7px;
   width: 100%;
@@ -193,40 +187,44 @@ p {
   bottom: 0;
   margin-bottom: 0; }
 
-/* line 140, ../sass/screen.scss */
+/* line 137, ../sass/screen.scss */
 .em-img {
   position: absolute;
   z-index: -10;
   bottom: 0; }
-  /* line 144, ../sass/screen.scss */
+  /* line 141, ../sass/screen.scss */
   .em-img img {
     margin: -10px; }
 
-/* line 149, ../sass/screen.scss */
+/* line 146, ../sass/screen.scss */
 .portfolio {
   padding-top: 15px;
   background: #f7f6ed; }
-  /* line 152, ../sass/screen.scss */
+  /* line 149, ../sass/screen.scss */
   .portfolio h2 {
-    margin-top: -95px;
-    margin-bottom: 18px; }
-  /* line 157, ../sass/screen.scss */
+    margin-bottom: 20px; }
+  /* line 152, ../sass/screen.scss */
   .portfolio .grid-item {
     /* Rectangle 2: */
     background: #D8D8D8;
     margin-bottom: 4%; }
-    /* line 161, ../sass/screen.scss */
+    /* line 156, ../sass/screen.scss */
     .portfolio .grid-item img {
       width: 100%; }
-  /* line 165, ../sass/screen.scss */
+  /* line 160, ../sass/screen.scss */
   .portfolio h4 {
     margin-top: -75px; }
-  /* line 168, ../sass/screen.scss */
+  /* line 163, ../sass/screen.scss */
   .portfolio .seeds {
     transform: scale(0.85); }
-    /* line 170, ../sass/screen.scss */
+    /* line 165, ../sass/screen.scss */
     .portfolio .seeds:hover {
       transform: color(#54b400); }
+  /* line 169, ../sass/screen.scss */
+  .portfolio h6 {
+    max-width: 430px;
+    margin: auto;
+    margin-bottom: 30px; }
 
 /* line 175, ../sass/screen.scss */
 .grid {
@@ -234,40 +232,151 @@ p {
 
 /* line 179, ../sass/screen.scss */
 .portfolio-content {
-  background: #f7f6ed; }
+  background: #f7f6ed;
+  overflow: hidden; }
 
-/* line 182, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 .cbp-l-filters-alignCenter {
   background: #f7f6ed;
   padding-bottom: 50px;
   margin-bottom: -40px; }
 
-/* line 188, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 .about {
   margin-bottom: 60px; }
-  /* line 190, ../sass/screen.scss */
+  /* line 191, ../sass/screen.scss */
   .about h3 {
     margin-bottom: 15px;
     margin-top: 30px; }
-  /* line 194, ../sass/screen.scss */
+  /* line 195, ../sass/screen.scss */
   .about a {
     color: #54b400; }
 
-/* line 199, ../sass/screen.scss */
+/* line 200, ../sass/screen.scss */
 .footer {
   background: url("../images/em-logo-light.svg") repeat-x #54b400;
   padding-top: 50px;
   padding-bottom: 50px;
   color: #f7f6ed;
   animation: animatedFooter 1000s ease-out; }
-  /* line 205, ../sass/screen.scss */
+  /* line 206, ../sass/screen.scss */
   .footer h2 {
     margin: 20px auto 30px; }
-  /* line 208, ../sass/screen.scss */
+  /* line 209, ../sass/screen.scss */
   .footer h4 {
     margin-bottom: 10px; }
 
-/* line 213, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 .copyright {
   padding-top: 8px;
   padding-bottom: 5px; }
+
+/* Larger than mobile */
+@media (min-width: 200px) and (max-width: 379px) {
+  /* line 224, ../sass/screen.scss */
+  .hero .em-img img {
+    width: 200px;
+    margin-top: -50px; }
+  /* line 229, ../sass/screen.scss */
+  .hero h1 {
+    margin-top: 10px; }
+    /* line 231, ../sass/screen.scss */
+    .hero h1 .logo-em img {
+      height: 180px;
+      width: 180px; }
+  /* line 236, ../sass/screen.scss */
+  .hero h4 {
+    display: none;
+    text-align: center;
+    margin: 10px auto 0;
+    float: none; }
+  /* line 242, ../sass/screen.scss */
+  .hero .melon-top {
+    margin-top: 5px; }
+    /* line 244, ../sass/screen.scss */
+    .hero .melon-top img {
+      width: 70%;
+      margin-bottom: -65%; }
+  /* line 250, ../sass/screen.scss */
+  .hero .seeds img {
+    width: 55%; } }
+@media (min-width: 380px) and (max-width: 449px) {
+  /* line 260, ../sass/screen.scss */
+  .hero .em-img img {
+    width: 200px;
+    margin-top: -50px; }
+  /* line 265, ../sass/screen.scss */
+  .hero h1 {
+    margin-top: 10px; }
+    /* line 267, ../sass/screen.scss */
+    .hero h1 .logo-em img {
+      height: 180px;
+      width: 180px; }
+  /* line 272, ../sass/screen.scss */
+  .hero h4 {
+    display: none;
+    text-align: center;
+    margin: 10px auto 0;
+    float: none; }
+  /* line 278, ../sass/screen.scss */
+  .hero .melon-top {
+    margin-top: 5px; }
+    /* line 280, ../sass/screen.scss */
+    .hero .melon-top img {
+      width: 70%;
+      margin-bottom: -55%; }
+  /* line 286, ../sass/screen.scss */
+  .hero .seeds img {
+    width: 55%; } }
+/* Larger than phablet (also point when grid becomes active) */
+@media (min-width: 450px) and (max-width: 749px) {
+  /* line 297, ../sass/screen.scss */
+  .hero .em-img img {
+    width: 300px;
+    margin-top: -50px; }
+  /* line 302, ../sass/screen.scss */
+  .hero h1 {
+    margin-top: 10px; }
+    /* line 304, ../sass/screen.scss */
+    .hero h1 .logo-em img {
+      height: 180px;
+      width: 180px; }
+  /* line 309, ../sass/screen.scss */
+  .hero h4 {
+    display: none;
+    text-align: center;
+    margin: 10px auto 0;
+    float: none; }
+  /* line 315, ../sass/screen.scss */
+  .hero .melon-top {
+    margin-top: 5px; }
+    /* line 317, ../sass/screen.scss */
+    .hero .melon-top img {
+      width: 90%;
+      margin-bottom: -60%; }
+  /* line 323, ../sass/screen.scss */
+  .hero .seeds img {
+    width: 55%; } }
+/* Larger than tablet */
+@media (min-width: 750px) and (max-width: 1000px) {
+  /* line 333, ../sass/screen.scss */
+  .em-img img {
+    width: 450px; }
+
+  /* line 338, ../sass/screen.scss */
+  .hero h1 {
+    margin-top: 10px;
+    padding-left: 80px; }
+    /* line 341, ../sass/screen.scss */
+    .hero h1 .logo-em img {
+      height: 300px;
+      width: 300px; }
+
+  /* line 347, ../sass/screen.scss */
+  .melon-top {
+    margin-top: 165px; }
+    /* line 349, ../sass/screen.scss */
+    .melon-top img {
+      width: 80%; } }
+/* Larger than desktop */
+/* Larger than Desktop HD */
